# ChangeLog for sys-freebsd/freebsd-contrib
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-freebsd/freebsd-contrib/ChangeLog,v 1.45 2013/08/09 21:35:22 aballier Exp $

*freebsd-contrib-9.2_rc1 (09 Aug 2013)

  09 Aug 2013; Alexis Ballier <aballier@gentoo.org>
  +freebsd-contrib-9.2_rc1.ebuild:
  Version bump, based on work of Yuta SATOH in bug #476646

  09 Aug 2013; Alexis Ballier <aballier@gentoo.org>
  -freebsd-contrib-9.0.ebuild:
  remove old

  18 Jun 2013; Alexis Ballier <aballier@gentoo.org>
  -freebsd-contrib-7.2.ebuild, -freebsd-contrib-8.0.ebuild:
  remove old

  27 Jan 2013; Alexis Ballier <aballier@gentoo.org>
  -freebsd-contrib-9.1_rc1.ebuild, -freebsd-contrib-9.1_rc2.ebuild,
  -freebsd-contrib-9.1_rc3.ebuild:
  remove rc versions

*freebsd-contrib-9.1 (27 Jan 2013)

  27 Jan 2013; Alexis Ballier <aballier@gentoo.org>
  +freebsd-contrib-9.1.ebuild:
  Bump to 9.1

  12 Jan 2013; Ulrich Müller <ulm@gentoo.org> freebsd-contrib-7.2.ebuild,
  freebsd-contrib-8.0.ebuild, freebsd-contrib-8.2.ebuild,
  freebsd-contrib-9.0.ebuild, freebsd-contrib-9.1_rc1.ebuild,
  freebsd-contrib-9.1_rc2.ebuild, freebsd-contrib-9.1_rc3.ebuild:
  Fix LICENSE, bug 449796.

*freebsd-contrib-9.1_rc3 (06 Nov 2012)

  06 Nov 2012; Alexis Ballier <aballier@gentoo.org>
  +freebsd-contrib-9.1_rc3.ebuild:
  bump to rc3

*freebsd-contrib-9.1_rc2 (14 Oct 2012)

  14 Oct 2012; Alexis Ballier <aballier@gentoo.org>
  +freebsd-contrib-9.1_rc2.ebuild:
  bump to 9.1_rc2

*freebsd-contrib-9.1_rc1 (11 Sep 2012)

  11 Sep 2012; Alexis Ballier <aballier@gentoo.org>
  +freebsd-contrib-9.1_rc1.ebuild:
  bump to 9.1_rc1 from bsd overlay by Yuta SATOH, bug #426838

  04 May 2012; Alexis Ballier <aballier@gentoo.org> freebsd-contrib-9.0.ebuild:
  install libodialog in lib64 for amd64

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> freebsd-contrib-9.0.ebuild:
  keyword ~amd64-fbsd

  30 Mar 2012; Alexis Ballier <aballier@gentoo.org>