@@ -9,13 +9,13 @@ DIST freebsd-gnu-9.1.tar.bz2 795778 SHA256 3b99c1fa1087bf69549e0990a0d7997954533
 DIST freebsd-gnu-9.2_rc1.tar.bz2 796244 SHA256 e0ac75f19ef37b65611d7b718cf4e464d98efb5e90f5e69f3e0e4cbca72cefdc SHA512 253946274094163539d7068eac721dcba7d2b564e6bfbef30ff5f75ee88927c9f323099af7f2627c0dc8c15566366816da1668b1897bd7e1a1b0534d8ad21584 WHIRLPOOL d874ba49ccd04fd653c4948f3094d082bef6c7477ecab47376618a0180c5093f7711e18dfb896ca39449a30cd941c82ae48a95f591ab75b8fba496544f11910f
 EBUILD freebsd-contrib-8.2.ebuild 1499 SHA256 79a4b0ec6855c7719743168d6296ea96875b5302f6eae9a9d2af249b9da206ff SHA512 28872d852a8ade5ce67bdebcae056c963a7be5f32d861a79cc0396696a00d966638d442f8e2c7795e06909159895f0620a7b979c99baf56092c808616e0bd019 WHIRLPOOL c3888e7e6db3e1fde07479e409c99ce513b03c290531191b2c820f6d31b209fced2ae608a1a5e1ef99da54e96f0115cfd11adfe1ff3b903ad929fd7bbaa68c34
 EBUILD freebsd-contrib-9.1.ebuild 1530 SHA256 a984256ccc46ba98cda937c5b0e89988327b7086ad4c5ca3258d013de22c537f SHA512 0ef58860c2f391bf1190c3b5058c8b5bf569b6414365b50d4c72351a89e4661a5b2c64f130bf7ffe2e1dd00ef700e3d4923cc7746fffc6f2a672539cc4fa7239 WHIRLPOOL 2812de8ded2ea17f0dac78d62241907bfc22686c14c4fd7b808e47c41ba8b82eb8f26467ec5b4d45f512d01f84c54d853cfdc439cf1a26b8fc798c04ed69267a
-EBUILD freebsd-contrib-9.2_rc1.ebuild 1639 SHA256 a194ed5a1ab1af7aeebea90c7855b32cd9150ea2473aa7046616844459ceb78d SHA512 bbd85886b868059484086e8ea0641ddd66430b4113f59f526b946c16203e2bc0cbaa0eee5623012c7faeb0618ab90ba35407c15026928cde40cc083546d7f36a WHIRLPOOL 89d20c5edee692e3cf3aaa8a89250e3c5e915bb930c367906fc9fd168331707c44b42d3d9cec2a8c5e92d508063851731eb6408cca56f51eeb1423c71d3405e8
-MISC ChangeLog 8369 SHA256 2b2aa4434001ed4408f942cbda728bb984dce6ec6aad7d2af4ec23a6080c3f32 SHA512 4bbc638e5834eb5565b083ec69f7cd28463b1b7e604565192bfc00c2df1e2635a754013b02bb4d8e9bbd03aa75acd41e4a859a7ea5f2c7b767635aeee49e5c39 WHIRLPOOL 316cfe3dacaa3db2c76661050ba6acb274a4ffec5a2e13264cb6abf1a21860ea6d0c0aba6d63e9bc6daa42cb01e5561659f49deeb68705f648808dd8adcf76a8
+EBUILD freebsd-contrib-9.2_rc1.ebuild 1214 SHA256 0b57914ec6b72ef01d0e5bc7ae1c5c6bc3d53da7190b29528fe3e283463ad4dd SHA512 c14b678d277befbfb1119bbd90133b228eee521da966b73e13ea6447646c158c4680c4712740a03a7ddbff4acd2677698441a987d51a10f045f59acc9dda2d19 WHIRLPOOL 15ac0dc16087612fe25050155a2c3c0be6ebbd6a0ed22dde8b276f2243f6a55efbaf8ee0aef235f515d5d0d62b203b0cedbe4a2dc24e2fe48603a5938b759f72
+MISC ChangeLog 8527 SHA256 883b7dc715ceaf6266c3546b3514b2e162665e024bc5e45b1f1aa5c4b8d455df SHA512 d10fc5eced257f9fa4490e67c68f0c1415d3ae5be6f42007e667c298b8edbcda72e9c80c8955fe8c810732dd4bc5b66561a8a787ce6cf171f65f97470f3acff0 WHIRLPOOL 89089820b374a94f857ec5738575f56bf7efc12c61e39f5308585b9057efbbe718da67372b4e97cb63e8ca60773a1d85717c14551a8e222e36f70f00a41b8598
 MISC metadata.xml 156 SHA256 30ab515d6ac492d3d6c36ac3c675511742c2149e56a6b3228c8d22ab8edb3ff7 SHA512 aecca1f1d4eff88d6d0ebb895d3529e0ac602e488368880f4fde751dd5b8768cccb8ed9cb1bbea36fc47a5169e50afb9b40ac3f608a5a4e4838e9f3c64255714 WHIRLPOOL bea666b5dcd6e8f24c75b7331c3bcfffe66c054d5c29e21b09c1ea7232b1a3bbd564c2e294b639a8c61e6bcbe3ede92b55cbb12e5e7208dad0bc334842ba4d84
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlIFYJsACgkQvFcC4BYPU0pjNQCgyxaHRG1eomRRe2jm9fji7UeI
-PSsAn25IzVcN9NhZ5bKAGYLhEXR70FcF
-=2jrr
+iEYEAREIAAYFAlIH5CcACgkQvFcC4BYPU0rK5ACfTNnmHnZsLPsTLNkE9cWMhoBh
+RAsAoKUZ6rin0+bubvhdRLxNl+lS8ZHr
+=pbhn
 -----END PGP SIGNATURE-----
