@@ -1,6 +1,10 @@
 # ChangeLog for sys-freebsd/freebsd-contrib
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-freebsd/freebsd-contrib/ChangeLog,v 1.45 2013/08/09 21:35:22 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-freebsd/freebsd-contrib/ChangeLog,v 1.46 2013/08/11 19:21:09 aballier Exp $
+
+  11 Aug 2013; Alexis Ballier <aballier@gentoo.org>
+  freebsd-contrib-9.2_rc1.ebuild:
+  Simplify a bit to call freebsd_src_unpack, bug #476646 by Yuta SATOH
 
 *freebsd-contrib-9.2_rc1 (09 Aug 2013)
 
